<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/Image"
                android:textColor="#000000"
                android:textSize="26sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/poppins_medium"
                android:padding="9dp"
                android:text="@string/pick"
                android:textSize="20sp" />


        </LinearLayout>

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp" />

        <View style="@style/Divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sem_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/semester"
                android:textColor="#000000"
                android:textSize="26sp" />

            <Spinner
                android:id="@+id/spinnerid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:entries="@array/Spinner_items"
                android:fontFamily="@font/poppins_medium">

            </Spinner>

            <View style="@style/Divider" />

            <TextView
                android:id="@+id/branch_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/branch"
                android:textColor="#000000"
                android:textSize="26sp" />

            <Spinner

                android:id="@+id/spinnerbranchid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:entries="@array/Spinner_branch_items"
                android:fontFamily="@font/poppins_medium" />

            <View style="@style/Divider" />

            <EditText
                android:id="@+id/description_id"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:backgroundTint="#d3d3d3"
                android:fontFamily="@font/poppins_medium"
                android:gravity="start"
                android:hint="@string/des"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLength="300"></EditText>
        </LinearLayout>

        <View style="@style/Divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/rb1"
                    android:textSize="20dp" />

                <RadioButton
                    android:id="@+id/rb2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/rb2"
                    android:textSize="20dp" />

            </RadioGroup>
        </LinearLayout>

        <View style="@style/Divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/contacts"
                android:textColor="#000000"
                android:textSize="26sp"></TextView>

            <EditText
                android:id="@+id/et_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:fontFamily="@font/poppins_medium"
                android:inputType="phone"
                android:maxLength="13"
                android:text="@string/contact">

            </EditText>

        </LinearLayout>

        <View style="@style/Divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/submit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_medium"
                android:padding="8dp"
                android:text="Submit"
                android:textAllCaps="false">

            </Button>

        </LinearLayout>


    </LinearLayout>

</ScrollView>
